# ynab-commands

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  changelod.md  changelog.md  pyproject.toml  test.env
scripts/: splitwise_connection.py
tests/: conftest.py  test_api_transactions.py  test_models.py  test_splitwise_api.py  test_ynab_api.py
tests/data/: account.json  budget_list.json  defaults.py  examples.py  transaction.json  transaction_list.json  updated_transaction.json
ynab_commands/: api.py  budget_api.py  budget_sync.py  config.py  main.py  models.py  splitwise_api.py  utilities.py  ynab_api.py
