[tool.poetry]
name = "ynab-commands"
version = "0.1.0"
description = ""
authors = ["Daara Shaw <daara.shaw@gmail.com>"]
readme = "README.md"
packages = [{include = "ynab_commands"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
requests = "^2.28.1"
requests-cache = "^0.9.7"
python-dotenv = "^0.21.0"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
responses = "^0.22.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
