[tool.poetry]
name = "ynab-commands"
version = "0.1.0"
description = ""
authors = ["Daara Shaw"]
readme = "README.md"
packages = [{include = "src/ynab_commands"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
requests = "^2.28.1"
requests-cache = "^0.9.7"
python-dotenv = "^0.21.0"
splitwise = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
responses = "^0.22.0"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240125"
ruff = "^0.3.3"
pre-commit = "^3.6.2"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "Q",
    "I",
]
fixable = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ynab-split="ynab_commands.main:run"
