[tool.poetry]
name = "ynab-commands"
version = "0.2.1"
description = ""
authors = ["Daara Shaw"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
requests = "^2.28.1"
requests-cache = "^0.9.7"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
responses = "^0.22.0"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240125"
ruff = "^0.4.0"
pre-commit = "^3.6.2"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "Q",
    "I",
    "RUF",
]
fixable = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ynab-split="ynab_commands.main:run"

[tool.mypy]
exclude = [
    "scripts/*",
    "tests/*",
]
strict=true
